--- a/website/templates/create_usuario.html
+++ b/website/templates/create_usuario.html
@@ -1,30 +1,32 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <title>cadastrar_usuario</title>
-</head>
-<body>
-    <div class="bg-primary d flex flex-row justify-content-between">
-        <span class="text-white">Gerenciamento de tarefas</span>
-        <div>
-            <ul class="nav justify-content-end">
-                <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="#">Cadastro de usuário</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link text-white" href="#">Cadastro de tarefas</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link text-white" href="#">Gerenciar tarefas</a>
-                </li>
-            </ul>
-        </div>
+{% extends "index.html" %}
+{% block title %}Cadastro{% endblock %}
+{% block subtitle %}Cadastro de Usuários{% endblock %}
+{% block content %}
+<form id="form__createuser" method="post">
+  {%csrf_token %}
+  <div class="mt-10 grid place-items-center grid-cols-2 ">
+    <div class="sm:col-span-2">
+      <label class="block text-sm/6 font-medium text-gray-900">Nome</label>
+      <div class="mt-1">
+        {{ form.nome }}
+      </div>
     </div>
 
-    
-</body>
-</html>
+    <div class="sm:col-span-2 mt-6">
+      <label class="block text-sm/6 font-medium text-gray-900">Email</label>
+      <div class="mt-1">
+        {{ form.email }}
+      </div>
+    </div>
+  </div>
+  <div class="flex justify-center mt-10">
+    <button style="background: #0056b3;"
+      class="flex m-1 shadow-blue-500 rounded-full py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-blue-800 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+      type="button">
+      <i data-lucide="save"></i>
+      <span class="self-center ml-1">Salvar</span>
+    </button>
+
+  </div>
+</form>
+{% endblock %}
