feat: creation forms done, working on listing tasks

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -22,7 +22,7 @@
             <a class="" href="{% url 'createtarefapage' %}">Cadastro de Tarefas</a>
         </li>
         <li class="">
-          <a class="" href="#">Gerenciar Tarefas</a> 
+            <a class="" href="{% url 'listtarefapage' %}">Gerenciar Tarefas</a> 
         </ul>
     </nav>
   </div>
