--- a/website/templates/create_tarefa.html
+++ b/website/templates/create_tarefa.html
@@ -5,7 +5,7 @@
 {% block content %}
 <form id="form__createtask" method="post">
   {%csrf_token %}
-  <div class="mt-10 grid place-items-center grid-cols-2">
+  <div class="mt-10 grid place-items-center grid-cols-2 relative">
     <div class="sm:col-span-2 mt-5">
       <label class="block text-sm/6 font-medium text-gray-900">Descrição</label>
       <div class="mt-1">
@@ -34,10 +34,14 @@
 
 
     </div>
+      <div class="mt-2 sm:col-span-2">
+        <label class="block text-sm/6 font-medium text-gray-900">Data de cadastro</label> 
+          {{ form.data_cadastro }}
+        </div>
   </div>
 
   <div class="flex justify-center mt-10">
-    <button style="background: #0056b3;"
+    <button type="submit" style="background: #0056b3;"
       class="flex m-1 shadow-blue-500 rounded-full py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-blue-800 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
       type="button">
       <i data-lucide="save"></i>
