--- a/website/templates/create_usuario.html
+++ b/website/templates/create_usuario.html
@@ -5,14 +5,14 @@
 <form id="form__createuser" method="post">
   {%csrf_token %}
   <div class="mt-10 grid place-items-center grid-cols-2 ">
-    <div class="sm:col-span-2">
+    <div class="sm:col-span-3">
       <label class="block text-sm/6 font-medium text-gray-900">Nome</label>
       <div class="mt-1">
         {{ form.nome }}
       </div>
     </div>
 
-    <div class="sm:col-span-2 mt-6">
+    <div class="sm:col-span-3 mt-6">
       <label class="block text-sm/6 font-medium text-gray-900">Email</label>
       <div class="mt-1">
         {{ form.email }}
@@ -22,7 +22,7 @@
   <div class="flex justify-center mt-10">
     <button style="background: #0056b3;"
       class="flex m-1 shadow-blue-500 rounded-full py-2 px-4 border border-transparent text-center text-sm text-white transition-all shadow-md hover:shadow-lg focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-blue-800 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
-      type="button">
+      type="submit">
       <i data-lucide="save"></i>
       <span class="self-center ml-1">Salvar</span>
     </button>
