--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="csrf-token" content="{{ csrf_token }}">
   <title>{% block title %}Home{% endblock %}</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
   <script src="{% static 'js/scripts.js' %}"></script>
+  <script src="{% static 'js/async.js' %}"></script>
 </head>
 <body class="m-0">
   <div class="" style="background: #0056b3">
