--- a/website/templates/list_tarefa.html
+++ b/website/templates/list_tarefa.html
@@ -14,13 +14,13 @@
       <span class="m-2"><strong class="m-1">Prioridade:</strong> {{ t.prioridade }}<br></span>
       <span class="m-2"><strong class="m-1">Vinculado à:</strong> {{ t.usuario }}<br></span>
       <div class="flex items-end justify-center -translate-x-2 gap-3 mt-3">
-        <a href="#" class="bg-green-600 rounded-md p-2 flex items-center shadow-xs shadow-green-600/50 hover:text-white" ><i class="mr-1" data-lucide="settings"></i>Editar</a>
+        <a href="{% url 'updatetarefapage' t.id %}" class="bg-green-600 rounded-md p-2 flex items-center shadow-xs shadow-green-600/50 hover:text-white" ><i class="mr-1" data-lucide="settings"></i>Editar</a>
         <a onclick="async.deleteTask({{ t.id }})" href="#" class="bg-red-600 rounded-md p-2 flex items-center shadow-xs shadow-red-600/50 hover:text-white"><i class="mr-1" data-lucide="trash-2"></i>Excluir</a> 
         <div class="flex-col align-center">
-          <select class="ring rounded-md self-baseline p-1 pr-14">
-            <option value="a fazer">a fazer</option>
-            <option value="fazendo">fazendo</option>
-            <option value="pronto">pronto</option>
+          <select class="ring rounded-md self-baseline p-1 pr-15">
+            <option class="text-center" value="a fazer">a fazer</option>
+            <option class="text-center" value="fazendo">fazendo</option>
+            <option class="text-center" value="pronto">pronto</option>
           </select>
           <button class="mt-2 bg-blue-600 rounded-md p-2 flex items-center shadow-xs shadow-blue-600/50 hover:text-white" type="submit"><i class="mr-1" data-lucide="funnel"></i>Alterar status</button>
         </div>
@@ -40,13 +40,13 @@
       <span class="m-2"><strong class="m-1">Prioridade:</strong> {{ t.prioridade }}<br></span>
       <span class="m-2"><strong class="m-1">Vinculado à:</strong> {{ t.usuario }}<br></span>
       <div class="flex items-end justify-center -translate-x-2 gap-3 mt-3">
-        <a href="#" class="bg-green-600 rounded-md p-2 flex items-center shadow-xs shadow-green-600/50 hover:text-white" ><i class="mr-1" data-lucide="settings"></i>Editar</a>
+        <a href="{% url 'updatetarefapage' t.id %}" class="bg-green-600 rounded-md p-2 flex items-center shadow-xs shadow-green-600/50 hover:text-white" ><i class="mr-1" data-lucide="settings"></i>Editar</a>
         <a onclick="async.deleteTask({{ t.id }})" href="#" class="bg-red-600 rounded-md p-2 flex items-center shadow-xs shadow-red-600/50 hover:text-white"><i class="mr-1" data-lucide="trash-2"></i>Excluir</a> 
         <div class="flex-col align-center">
-          <select class="ring rounded-md self-baseline p-1 pr-14">
-            <option value="a fazer">a fazer</optin>
-            <option value="fazendo">fazendo</option>
-            <option value="pronto">pronto</option>
+          <select class="ring rounded-md self-baseline p-1 pr-15">
+            <option class="text-center" value="a fazer">a fazer</optin>
+            <option class="text-center" value="fazendo">fazendo</option>
+            <option class="text-center" value="pronto">pronto</option>
           </select>
           <button class="mt-2 bg-blue-600 rounded-md p-2 flex items-center shadow-xs shadow-blue-600/50 hover:text-white" type="submit"><i class="mr-1" data-lucide="funnel"></i>Alterar status</button>
         </div>
@@ -66,13 +66,13 @@
       <span class="m-2"><strong class="m-1">Prioridade:</strong> {{ t.prioridade }}<br></span>
       <span class="m-2"><strong class="m-1">Vinculado à:</strong> {{ t.usuario }}<br></span>
       <div class="flex items-end justify-center -translate-x-2 gap-3 mt-3">
-        <a href="#" class="bg-green-600 rounded-md p-2 flex items-center shadow-xs shadow-green-600/50 hover:text-white" ><i class="mr-1" data-lucide="settings"></i>Editar</a>
+        <a href="{% url 'updatetarefapage' %}" class="bg-green-600 rounded-md p-2 flex items-center shadow-xs shadow-green-600/50 hover:text-white" ><i class="mr-1" data-lucide="settings"></i>Editar</a>
         <a onclick="async.deleteTask({{ t.id }})" href="#" class="bg-red-600 rounded-md p-2 flex items-center shadow-xs shadow-red-600/50 hover:text-white"><i class="mr-1" data-lucide="trash-2"></i>Excluir</a> 
         <div class="flex-col align-center">
-          <select class="ring rounded-md self-baseline p-1 pr-14">
-            <option value="a fazer">a fazer</option>
-            <option value="fazendo">fazendo</option>
-            <option value="pronto">pronto</option>
+          <select class="ring rounded-md self-baseline p-1 pr-15">
+            <option class="text-center" value="a fazer">a fazer</option>
+            <option class="text-center" value="fazendo">fazendo</option>
+            <option class="text-center" value="pronto">pronto</option>
           </select>
           <button class="mt-2 bg-blue-600 rounded-md p-2 flex items-center shadow-xs shadow-blue-600/50 hover:text-white" type="submit"><i class="mr-1" data-lucide="funnel"></i>Alterar status</button>
         </div>
